# engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: app.hpp  program.hpp  window.hpp
source/: app.cpp  main.cpp  program.cpp  window.cpp
